2001-09-06  Michael Ernst  <mernst@lcs.mit.edu>

	* src/bytecode.cpp (EmitAssignmentExpression):
	* src/getclass.cpp (ProcessSignature):
	* src/decl.cpp (ProcessMethodDeclaration): Fix some warnings
	triggered by some versions of gcc -Wall - patch 137.

2001-09-06  Michael Ernst  <mernst@lcs.mit.edu>

	* src/stream.h (SetUpComments): Prevent duplicate work, by
	checking if comment_buffer already exists - patch 133.

2001-09-05  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitSwitchStatement): Fix assertion failure
	when -g is enabled - patch 143, from bug 136.

2001-09-05  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessSynchronizedStatement, ProcessReturnStatement):
	* src/expr.cpp (ProcessAmbiguousName, ProcessMethodName):
	Fix remaining cases of string constants not being
	compiled inline - patch 121, from bug 66.

2001-09-05  Eric B Blake  <eblake@ee.byu.edu>

	* src/segment.h (PairSegment, TripletSegment):
	* src/op.h (Operators):
	* src/op.cpp (opline):
	* src/platform.h (Ostream):
	* src/body.cpp (ProcessLocalVariableDeclarationStatement): Fix
	compiler warnings on HP-UX 11.00 aCC.

2001-09-05  Ian P. Cardenas  <ian.cardenas@emagine-solutions.com>

	* src/semantic.h (AddDependence): changed pedantic error reporting
	to use ReportSemError as to avoid segfault when error is NULL -
	patch 108, from bug 491.

2001-09-05  Eric Blake  <ebb9@email.byu.edu>

	* src/platform.h (Ostream operator<<): Add missing
	operator<<(ostream&(&)(ostream&)).
	* src/access.h:
	* src/ast.cpp:
	* src/bytecode.cpp:
	* src/class.h:
	* src/control.cpp:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/depend.cpp:
	* src/dump.cpp:
	* src/error.cpp:
	* src/getclass.cpp:
	* src/incrmnt.cpp:
	* src/jikesapi.cpp:
	* src/op.cpp:
	* src/stream.cpp:
	* src/unparse.cpp: Use endl instead of '\n' for platform
	independence.

2001-09-04  Eric Blake  <ebb9@email.byu.edu>

	* depcomp: One more autotool file, but only useful when
	configuring with dependency tracking enabled.